--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,11 +1,7 @@
-spring.datasource.hikari.connection-timeout=20000
-spring.datasource.hikari.maximum-pool-size=5
-
-spring.datasource.url=
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:mysql://localhost:3306/dev
+spring.datasource.username=root
 spring.datasource.password=123456
 
 spring.jpa.hibernate.ddl-auto=create
-
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
