--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,2 +1,5 @@
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url= mysql://b96f7b809f70d2:2a347b43@us-cdbr-east-03.cleardb.com/heroku_e144e8386a86b48?reconnect=true
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
