--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= mysql://b96f7b809f70d2:2a347b43@us-cdbr-east-03.cleardb.com/heroku_e144e8386a86b48?reconnect=true
+spring.datasource.url=mysql://msiaewciq0h8clcv:t2r6gb3stxm4d2m5@pxukqohrckdfo4ty.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/zbxpipnx7gqchlcj
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
